Bug 106912 - radv: 16-bit depth buffer causes artifacts in Shadow Warrior 2
Summary: radv: 16-bit depth buffer causes artifacts in Shadow Warrior 2
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-13 15:00 UTC by Philip Rebohle
Modified: 2018-06-13 18:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Philip Rebohle 2018-06-13 15:00:28 UTC
Hello,

Shadow Warrior 2 uses D16_UNORM as a shadow map format, and clearing the depth buffer in one render pass instance and rendering to it in another results in parts of the depth buffer getting set to 1.0. The game renders correctly with RADV_DEBUG=nohiz.

I wasn't able to reproduce this issue outside of DXVK so far, so here's a Renderdoc capture of the issue (captured on Polaris 10):

  https://mega.nz/#!gfoWFDSC!rb9qsW9H6dGq_gsNvpdhPW82mSkZEy94PX-4Ey6BSTs

The render pass in question starts at EID 19473, which should be bookmarked. For the capture I used Mesa 18.1.1, but the issue is still present in latest -git.

Regards
- Philip
Comment 1 Samuel Pitoiset 2018-06-13 16:26:23 UTC
Can you explain how to reproduce the issue in-game? I would like to know if Vega is affected as well.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.